--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "bootstrap": "^5.3.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
+    "next": "^13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
